@@ -1,4 +1,7 @@
 
+2009-03-16 23:27 Ali aliov@xfce.org 
+	 * : Added freedesktop.PowerManagement power interfaces and methods
+
 2009-03-16 19:06 Ali aliov@xfce.org 
 	 * : Add a weak reference on the adapter object+remove unused signals
 
